[package]
name = "systemctl"
version = "0.3.1"
license = "MIT OR Apache-2.0"
authors = ["Guillaume W. Bres <guillaume.bressaix@gmail.com>"]
description = "Small crate to interact with systemd units"
homepage = "https://github.com/gwbres/systemctl"
edition = "2021"
readme = "README.md"

[features]
default = []
serde = ["dep:serde"]

[dependencies]
strum = "0.25"
strum_macros = "0.25"
itertools = "0.12"
serde = { version = "1.0", optional = true, default-features = false, features = ["derive"] }

[dev-dependencies]
serde_json = "1.0"
