[package]
name = "systemctl"
version = "0.3.1"
license = "MIT OR Apache-2.0"
authors = ["Guillaume W. Bres <guillaume.bressaix@gmail.com>"]
description = "Small crate to interact with systemd units"
homepage = "https://github.com/gwbres/systemctl"
edition = "2021"
readme = "README.md"

[features]
default = []
serde = ["dep:serde"]
args = ["dep:shlex"]

[dependencies]
strum = "0.25"
strum_macros = "0.25"
itertools = "0.11"
serde = { version = "1.0", optional = true, default-features = false, features = ["derive"] }
shlex = { version = "1.3", optional = true }

[dev-dependencies]
serde_json = "1.0"
