[package]
name = "systemctl"
version = "0.5.0"
license = "MIT OR Apache-2.0"
authors = ["Guillaume W. Bres <guillaume.bressaix@gmail.com>"]
description = "Small crate to interact with systemd units"
repository = "https://github.com/gwbres/systemctl"
edition = "2021"
readme = "README.md"

[features]
default = []
serde = ["dep:serde"]

[dependencies]
strum = "0.26"
strum_macros = "0.26"
itertools = "0.13"
serde = { version = "1.0", optional = true, default-features = false, features = ["derive"] }
bon="2.3"

[dev-dependencies]
serde_json = "1.0"
